--- a/Authenticator/pom.xml
+++ b/Authenticator/pom.xml
@@ -12,17 +12,14 @@
     <artifactId>authenticator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>authenticator</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Auth API</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <docker.image.prefix>authservice</docker.image.prefix>
     </properties>
 
     <dependencies>
-        <!--dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency-->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
@@ -76,10 +73,19 @@
     </dependencies>
 
     <build>
+        <finalName>mccAuthAPI</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.9</version>
+                <configuration>
+                    <repository>${docker.image.prefix}/${project.artifactId}</repository>
+                </configuration>
             </plugin>
         </plugins>
     </build>
